--- a/scss/_dice.scss
+++ b/scss/_dice.scss
@@ -1,25 +1,25 @@
 .container {
   flex-wrap: wrap;
   padding: 0 40px;
-  background-color: lightyellow;
+  background-color: rgb(252, 5, 38);
 }
 
 [class^="cara__"] {
   width: 225px;
   height: 225px;
-  margin: 25px;
+  margin: 35px;
   border-radius: 15px;
   padding: 1.5em;
-  background-color: #1c1c1c;
+  background-color: #070707;
   display: flex;
   justify-content: space-between;
 }
 .punto {
   width: 50px;
   height: 50px;
-  border: solid #4c4c4c;
+  border: solid #969494;
   border-radius: 50%;
-  background-color: #4e4e4e;
+  background-color: #b3b2b2;
 }
 
 .cara__1 {
