--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,8 +1,31 @@
 @import "cssReset";
 @import "var";
 @import "dice";
-
+* {
+  box-sizing: border-box;
+}
+html,
+body {
+  min-height: 100%;
+}
+header {
+  height: 2em;
+  background-color: #1c1c1c;
+}
 .container {
+  height: 80%;
   display: flex;
   justify-content: center;
+  padding: 0 5em;
+}
+footer {
+  height: 10%;
+  background-color: #1c1c1c;
+  text-align: center;
+  p {
+    padding: 2vh;
+    color: rgb(250, 246, 246);
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 0.8em;
+  }
 }
