--- a/scss/_dice.scss
+++ b/scss/_dice.scss
@@ -7,7 +7,7 @@
 [class^="cara__"] {
   width: 225px;
   height: 225px;
-  margin: 35px;
+  margin: 35px 45px;
   border-radius: 15px;
   padding: 1.5em;
   background-color: #070707;
